--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev-all": "concurrently \"npx nx serve admin --host 0.0.0.0 --port 4201\" \"npx nx serve learner --host 0.0.0.0 --port 4202\"",
+    "dev-all": "nx run-many --targets=serve --projects=admin,learner --configuration=development --parallel --port=4201,4202 --host 0.0.0.0",
     "dev-admin": "npx nx serve admin --host 0.0.0.0 --port 4201",
     "dev-learner": "npx nx serve learner --host 0.0.0.0 --port 4202",
     "build-all": "npx nx build admin --configuration=production --output-path=dist/admin && npx nx build learner --configuration=production --output-path=dist/learner",
