Add entities and .sql files 28-04-2025

--- a/Backend/WebAPI/Dockerfile
+++ b/Backend/WebAPI/Dockerfile
@@ -1,11 +1,11 @@
 FROM openjdk:25-slim-bullseye
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    apt-utils \
-    && apt-get install -y maven \
-    && rm -rf /var/lib/apt/lists/*
 WORKDIR /app
 COPY ./pom.xml .
 COPY ./src ./src
-RUN mvn clean package -DskipTests
+RUN apt-get update && apt-get install -y --no-install-recommends maven \
+    && mvn clean package -DskipTests \
+    && apt-get remove -y maven \
+    && apt-get autoremove -y \
+    && rm -rf /var/lib/apt/lists/* /root/.m2
 EXPOSE 9000
 CMD ["java", "-jar", "target/WebAPI-0.0.1-SNAPSHOT.jar"]
