--- a/Backend/WebAPI/src/main/resources/application.properties
+++ b/Backend/WebAPI/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=WebAPI
 server.port=9000
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
-
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migration
+spring.flyway.locations=classpath:db/mysql/migrations
 spring.flyway.baseline-on-migrate=true
