--- a/Backend/WebAPI/src/main/resources/application.properties
+++ b/Backend/WebAPI/src/main/resources/application.properties
@@ -12,3 +12,4 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/mysql/migrations
 spring.flyway.baseline-on-migrate=true
+jwt.secret-key=${JWT_SECRET_KEY}
