--- a/Backend/WebAPI/src/main/resources/application.properties
+++ b/Backend/WebAPI/src/main/resources/application.properties
@@ -13,3 +13,13 @@ spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/mysql/migrations
 spring.flyway.baseline-on-migrate=true
 jwt.secret-key=${JWT_SECRET_KEY}
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.data.redis.password=${SPRING_REDIS_PASSWORD}
+spring.data.redis.port=6379
+spring.data.redis.host=redis
