--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -29,9 +29,11 @@
     "@angular-devkit/build-angular": "~19.2.0",
     "@angular-devkit/core": "~19.2.0",
     "@angular-devkit/schematics": "~19.2.0",
+    "@angular/cdk": "^19.2.15",
     "@angular/cli": "~19.2.0",
     "@angular/compiler-cli": "~19.2.0",
     "@angular/language-service": "~19.2.0",
+    "@angular/material": "^19.2.15",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "^20.1.4",
     "@nx/eslint": "20.8.0",
