Add footer, home component admin and services:my-form-builder,dummy-text for angular 12-05-2025

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,9 +72,9 @@ services:
     env_file:
       - ./Tunnel/.env
     restart: unless-stopped
-    depends_on:
-      - mysql
-      - webapi
+    #    depends_on:
+    #      - mysql
+    #      - webapi
     networks:
       - app-network
 
