--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "~19.2.0",
     "@angular/platform-browser-dynamic": "~19.2.0",
     "@angular/router": "~19.2.0",
+    "@ng-icons/core": "^31.3.0",
+    "@ng-icons/material-icons": "^31.3.0",
+    "lorem-ipsum": "^2.0.8",
     "ngx-toastr": "~18.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.4",
@@ -29,11 +32,9 @@
     "@angular-devkit/build-angular": "~19.2.0",
     "@angular-devkit/core": "~19.2.0",
     "@angular-devkit/schematics": "~19.2.0",
-    "@angular/cdk": "^19.2.15",
     "@angular/cli": "~19.2.0",
     "@angular/compiler-cli": "~19.2.0",
     "@angular/language-service": "~19.2.0",
-    "@angular/material": "^19.2.15",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "^20.1.4",
     "@nx/eslint": "20.8.0",
