--- a/Backend/WebAPI/src/main/resources/application.properties
+++ b/Backend/WebAPI/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.data.redis.password=${SPRING_REDIS_PASSWORD}
 spring.data.redis.port=6379
 spring.data.redis.host=redis
+cloudinary.cloud-name=dytgubzxb
+cloudinary.api-key=${CLOUDINARY_API_KEY}
+cloudinary.api-secret=${CLOUDINARY_API_SECRET}
