--- a/Backend/WebAPI/pom.xml
+++ b/Backend/WebAPI/pom.xml
@@ -155,6 +155,12 @@
             <artifactId>cloudinary-taglib</artifactId>
             <version>2.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.20.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
