Add profile components and table result answers 17-06-2025

--- a/Backend/WebAPI/src/main/resources/application.properties
+++ b/Backend/WebAPI/src/main/resources/application.properties
@@ -26,3 +26,6 @@ spring.data.redis.host=redis
 cloudinary.cloud-name=dytgubzxb
 cloudinary.api-key=${CLOUDINARY_API_KEY}
 cloudinary.api-secret=${CLOUDINARY_API_SECRET}
+logging.level.org.springframework.security=DEBUG
+logging.level.com.vhl.webapi.security=DEBUG
+logging.level.com.vhl.webapi.services=DEBUG
