--- a/Frontend/apps/admin/project.json
+++ b/Frontend/apps/admin/project.json
@@ -8,12 +8,16 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/admin",
         "index": "apps/admin/src/index.html",
         "browser": "apps/admin/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js"
+        ],
         "tsConfig": "apps/admin/tsconfig.app.json",
         "assets": [
           {
@@ -44,7 +48,13 @@
               "maximumError": "8kb"
             }
           ],
-          "outputHashing": "all"
+          "outputHashing": "all",
+          "fileReplacements": [
+            {
+              "replace": "apps/admin/src/app/environments/environment.dev.ts",
+              "with": "apps/admin/src/app/environments/environment.prod.ts"
+            }
+          ]
         },
         "development": {
           "optimization": false,
