--- a/Backend/ChatBotAPI/requirements.txt
+++ b/Backend/ChatBotAPI/requirements.txt
@@ -1,19 +1,74 @@
 annotated-types==0.7.0
 anyio==4.9.0
+certifi==2025.6.15
+charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
+distro==1.9.0
+et_xmlfile==2.0.0
+faiss-cpu==1.11.0
 fastapi==0.115.12
+fasttext-numpy2==0.10.4
+filelock==3.18.0
+fsspec==2025.5.1
 h11==0.16.0
+hf-xet==1.1.5
+httpcore==1.0.9
 httptools==0.6.4
+httpx==0.28.1
+huggingface-hub==0.33.2
 idna==3.10
+Jinja2==3.1.6
+jiter==0.10.0
+joblib==1.5.1
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.5
+numpy==2.3.1
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
+openai==1.93.0
+openpyxl==3.1.5
+packaging==25.0
+pandas==2.3.0
+pybind11==2.13.6
 pydantic==2.11.4
 pydantic_core==2.33.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+pytz==2025.2
 PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.4
+safetensors==0.5.3
+scikit-learn==1.7.0
+scipy==1.16.0
+six==1.17.0
 sniffio==1.3.1
 starlette==0.46.2
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.21.2
+torch==2.7.1
+tqdm==4.67.1
+transformers==4.53.0
+triton==3.3.1
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.5.0
 uvicorn==0.34.2
 watchfiles==1.0.5
 websockets==15.0.1
