Add reset password

--- a/Backend/WebAPI/src/main/resources/application.properties
+++ b/Backend/WebAPI/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.data.redis.password=${SPRING_REDIS_PASSWORD}
 spring.data.redis.port=6379
-spring.data.redis.host=redis
+spring.data.redis.host=${SPRING_REDIS_HOST}
 cloudinary.cloud-name=dytgubzxb
 cloudinary.api-key=${CLOUDINARY_API_KEY}
 cloudinary.api-secret=${CLOUDINARY_API_SECRET}
