--- a/Backend/WebAPI/src/main/resources/application.properties
+++ b/Backend/WebAPI/src/main/resources/application.properties
@@ -23,6 +23,7 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.data.redis.password=${SPRING_REDIS_PASSWORD}
 spring.data.redis.port=6379
 spring.data.redis.host=${SPRING_REDIS_HOST}
+spring.data.redis.ai-key=${SPRING_REDIS_AI_KEY}
 cloudinary.cloud-name=dytgubzxb
 cloudinary.api-key=${CLOUDINARY_API_KEY}
 cloudinary.api-secret=${CLOUDINARY_API_SECRET}
@@ -31,3 +32,4 @@ logging.level.com.vhl.webapi.security=DEBUG
 logging.level.com.vhl.webapi.services=DEBUG
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=200MB
+ai-api-url=${AI_API_URL}
