--- a/Backend/ChatBotAPI/requirements.txt
+++ b/Backend/ChatBotAPI/requirements.txt
@@ -1,16 +1,26 @@
+absl-py==2.3.1
 annotated-types==0.7.0
 anyio==4.9.0
+asttokens==3.0.0
 cachetools==5.5.2
 certifi==2025.6.15
 charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
+comm==0.2.3
+contourpy==1.3.3
+cycler==0.12.1
+debugpy==1.8.15
+decorator==5.2.1
+diskcache==5.6.3
 distro==1.9.0
 et_xmlfile==2.0.0
+executing==2.2.0
 faiss-cpu==1.11.0
 fastapi==0.115.12
 fasttext-numpy2==0.10.4
 filelock==3.18.0
+fonttools==4.59.0
 fsspec==2025.5.1
 google-auth==2.40.3
 google-genai==1.28.0
@@ -21,11 +31,23 @@ httptools==0.6.4
 httpx==0.28.1
 huggingface-hub==0.33.2
 idna==3.10
+ipykernel==6.30.0
+ipython==9.4.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
 Jinja2==3.1.6
 jiter==0.10.0
 joblib==1.5.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+kiwisolver==1.4.8
+llama_cpp_python==0.3.14
+lxml==6.0.0
 MarkupSafe==3.0.2
+matplotlib==3.10.5
+matplotlib-inline==0.1.7
 mpmath==1.3.0
+nest-asyncio==1.6.0
 networkx==3.5
 nltk==3.9.1
 numpy==2.3.1
@@ -47,35 +69,53 @@ openai==1.93.0
 openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.0
+parso==0.8.4
+pexpect==4.9.0
 pillow==11.3.0
+platformdirs==4.3.8
+portalocker==3.2.0
+prompt_toolkit==3.0.51
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pybind11==2.13.6
 pydantic==2.11.4
 pydantic_core==2.33.2
+Pygments==2.19.2
 PyMuPDF==1.26.3
+pyparsing==3.2.3
 python-crfsuite==0.9.11
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
+pyzmq==27.0.0
+redis==6.2.0
 regex==2024.11.6
 requests==2.32.4
+rouge_score==0.1.2
 rsa==4.9.1
+sacrebleu==2.5.1
 safetensors==0.5.3
 scikit-learn==1.7.0
 scipy==1.16.0
 sentence-transformers==5.0.0
 six==1.17.0
 sniffio==1.3.1
+stack-data==0.6.3
 starlette==0.46.2
 sympy==1.14.0
+tabulate==0.9.0
 tenacity==8.5.0
 threadpoolctl==3.6.0
 tokenizers==0.21.2
 torch==2.7.1
+tornado==6.5.1
 tqdm==4.67.1
+traitlets==5.14.3
 transformers==4.53.0
 triton==3.3.1
 typing-inspection==0.4.0
@@ -86,4 +126,5 @@ underthesea_core==1.0.4
 urllib3==2.5.0
 uvicorn==0.34.2
 watchfiles==1.0.5
+wcwidth==0.2.13
 websockets==15.0.1
