--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,9 +22,11 @@
     "@angular/router": "~19.2.0",
     "@ng-icons/core": "^31.4.0",
     "@ng-icons/material-icons": "^31.4.0",
+    "@tailwindcss/typography": "^0.5.16",
     "crypto-ts": "^1.0.2",
     "flatpickr": "^4.6.13",
     "lorem-ipsum": "^2.0.8",
+    "ngx-markdown": "^19.1.1",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.4",
