--- a/Backend/ChatBotAPI/Dockerfile
+++ b/Backend/ChatBotAPI/Dockerfile
@@ -1,8 +1,14 @@
-FROM python:3.11-alpine
-WORKDIR /app
+FROM python:3.11.9
+WORKDIR /ChatBotAPI
 COPY requirements.txt .
-RUN apk add --no-cache build-base && \
-    pip install --no-cache-dir --default-timeout=100000 -r requirements.txt
-COPY src/ .
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    cmake \
+    git \
+    libffi-dev \
+    python3-dev \
+    && rm -rf /var/lib/apt/lists/*
+RUN pip install --no-cache-dir --default-timeout=100000 -r requirements.txt
+COPY src/ ./src
 EXPOSE 8000
-CMD  ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD  ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
