--- a/Backend/WebAPI/Dockerfile
+++ b/Backend/WebAPI/Dockerfile
@@ -2,4 +2,4 @@ FROM openjdk:25-slim-bullseye
 WORKDIR /app
 COPY target/WebAPI-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 9000
-CMD ["java", "-jar", "app.jar"]
+CMD ["java", "-jar", "app.jar", "--spring.profiles.active=prod"]
