--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       dockerfile: Dockerfile
     env_file:
       - ./Backend/ChatBotAPI/.env
+      - ./Backend/ChatBotAPI/.env.docker
     depends_on:
       - mysql
       - redis
@@ -56,7 +57,7 @@ services:
       context: ./Frontend
       dockerfile: Dockerfile
     ports:
-      - "80:80"
+      - "8080:80"
     depends_on:
       - webapi
     networks:
